fix: AS 및 임대 도메인 크리티컬 버그 수정 및 성능·보안 최적화
[백엔드 수정 사항]
- 성능: 메모리 OOM 및 DB 커넥션 고갈 방지를 위한 청크(Chunk) 기반 조회 및 수동 페이징 적용
- 버그: 임대/AS 상태 변경 시 기기(Device) 상태 동기화 및 명시적 DB 저장(save) 누락 해결
- 안정성: @Transactional에 rollbackFor = Exception.class 속성 추가로 체크 예외 롤백 보장
- 안정성: 필수 파라미터 NPE 방어, 날짜 파싱 예외(500) 처리 및 중복 임대 검증 로직 추가
- 비즈니스: 기획서 기반 상태 전이 검증(validateStatusTransition) 로직 정상 연결

[프론트엔드 수정 사항]
- 보안: HTML 렌더링 시 XSS 취약점 방어를 위한 escapeHtml() 이스케이프 함수 전면 적용